# universal-rigging-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: deploy.sh
src/rigging_bridge/: __init__.py  app.py  config.py  models.py
src/rigging_bridge/api/: __init__.py
src/rigging_bridge/api/v1/: models.py  router.py
src/rigging_bridge/blender/: __init__.py  run_conversion.py
src/rigging_bridge/bridge/: __init__.py  joint_matcher.py  orchestrator.py  pose_reset.py  rig_detector.py  skeleton_adjuster.py  types.py  weight_transfer.py
src/rigging_bridge/services/: conversion.py
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_api_convert.py  test_conversion_service.py
